added copy police contacts

--- a/app/globals.css
+++ b/app/globals.css
@@ -62,3 +62,8 @@
     /* pointer-events: auto !important; */
   }
 }
+
+#mainContent {
+  scrollbar-color: transparent transparent !important;
+  scrollbar-width: thin;
+}
